--- a/App/Views/admin/layer/user_edit.html
+++ b/App/Views/admin/layer/user_edit.html
@@ -72,7 +72,10 @@
         },'json');
 
         $('#close').click(function () {
-
+            layer.msg('ffff',{
+                icon:2,
+                time:2000
+            });
         });
     });
 </script>
