--- a/App/Views/admin/layer/user_edit.html
+++ b/App/Views/admin/layer/user_edit.html
@@ -72,7 +72,7 @@
         },'json');
 
         $('#close').click(function () {
-            parent.layer.close(index);
+            parent.layer.close(parentIndex);
             // parent.location.href = parent.location.href;
         });
     });
