--- a/App/Views/admin/layer/user_edit.html
+++ b/App/Views/admin/layer/user_edit.html
@@ -3,33 +3,33 @@
     <div class="layui-form-item">
         <label class="layui-form-label">用户账号</label>
         <div class="layui-input-block">
-            <input readonly="readonly" disabled="disabled" name="username" value="admin" required="required" title="请输入用户名称" placeholder="请输入用户名称" class="layui-input layui-bg-gray" />
+            <input readonly="readonly" disabled="disabled" name="username" value="{$result.username}" required="required" title="请输入用户名称" placeholder="请输入用户名称" class="layui-input layui-bg-gray" />
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">联系手机</label>
         <div class="layui-input-block">
-            <input type="tel" autofocus="" name="phone" value="18993368867" pattern="^1[3-9][0-9]{9}$" title="请输入联系手机" placeholder="请输入联系手机" class="layui-input" />
+            <input type="tel" autofocus="" name="phone" value="{$result.phone}" pattern="^1[3-9][0-9]{9}$" title="请输入联系手机" placeholder="请输入联系手机" class="layui-input" />
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">联系邮箱</label>
         <div class="layui-input-block">
-            <input name="mail" pattern="^([a-zA-Z0-9_\\.\\-])+\\@(([a-zA-Z0-9\\-])+\\.)+([a-zA-Z0-9]{2,4})+$" value="" title="请输入联系邮箱" placeholder="请输入联系邮箱" class="layui-input" />
+            <input name="mail" pattern="^([a-zA-Z0-9_\\.\\-])+\\@(([a-zA-Z0-9\\-])+\\.)+([a-zA-Z0-9]{2,4})+$" value="{$result.mail}" title="请输入联系邮箱" placeholder="请输入联系邮箱" class="layui-input" />
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">访问授权</label>
         <div class="layui-input-block">
             <label class="think-checkbox">
-                <!----> <input type="checkbox" checked="" name="authorize[]" value="1" lay-ignore="" /> 个人
-                <!----> </label>
+                <input type="checkbox" checked="" name="authorize[]" value="1" lay-ignore="" /> 个人
+             </label>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">用户描述</label>
         <div class="layui-input-block">
-            <textarea placeholder="请输入用户描述" title="请输入用户描述" class="layui-textarea" name="desc"></textarea>
+            <textarea placeholder="请输入用户描述" title="请输入用户描述" class="layui-textarea" name="desc">{$result.desc}</textarea>
         </div>
     </div>
     <div class="hr-line-dashed"></div>
@@ -72,8 +72,7 @@
         },'json');
 
         $('#close').click(function () {
-            parent.layer.close(parentIndex);
-            // parent.location.href = parent.location.href;
+            parent.layer.close(parentIndex); 
         });
     });
 </script>
