--- a/App/Views/public/bottom.html
+++ b/App/Views/public/bottom.html
@@ -101,6 +101,8 @@
 <script src="__STATIC__/assets/js/ace-elements.min.js"></script>
 <script src="__STATIC__/assets/js/ace.min.js"></script>
 
+<script src="__STATIC__/admin.js"></script>
+
 <!-- inline scripts related to this page -->
 
 <script type="text/javascript">
