--- a/App/Views/public/top.html
+++ b/App/Views/public/top.html
@@ -254,7 +254,7 @@
                         <li class="divider"></li>
 
                         <li>
-                            <a href="#">
+                            <a href="/admin/login/out">
                                 <i class="icon-off"></i>
                                 退出
                             </a>
