--- a/App/Views/admin/admin/user.html
+++ b/App/Views/admin/admin/user.html
@@ -84,34 +84,30 @@
 					{if $vo.status eq 0}<span class="color-red">已禁用</span>{elseif $vo.status eq 1}<span class="color-green">使用中</span>{/if}
 				</td>
 				<td class='text-left nowrap'>
-
-					{if auth("$classuri/edit")}
+ 
 					<span class="text-explode">|</span>
 					<a data-title="编辑用户" onclick='editOpen("用户编辑","/admin/layer/user_edit?id={$vo.id}")'>编辑</a>
-					{/if}
-
-					{if auth("$classuri/auth")}
+					 
+ 
 					<span class="text-explode">|</span>
 					<a data-title="用户授权" data-modal='{:url("$classuri/auth")}?id={$vo.id}'>授权</a>
-					{/if}
-
-					{if auth("$classuri/pass")}
+				 
+ 
 					<span class="text-explode">|</span>
 					<a data-title="设置密码"  onclick='editOpen("设置密码","/admin/layer/pass?id={$vo.id}",["700px","350px"])'>密码</a>
-					{/if}
+				 
 
-					{if $vo.status eq 1 and auth("$classuri/forbid")}
+					{if $vo.status eq 1 }
 					<span class="text-explode">|</span>
-					<a data-update="{$vo.id}" data-field='status' data-value='0' data-action='{:url("$classuri/forbid")}'>禁用</a>
-					{elseif auth("$classuri/resume")}
+					<a data-update="{$vo.id}" data-field='status' data-value='0' onclick="confirmMsg('/admin/admin/forbid?id={$vo.id}&status=0','确认禁用吗')">禁用</a>
+					{elseif}
 					<span class="text-explode">|</span>
-					<a data-update="{$vo.id}" data-field='status' data-value='1' data-action='{:url("$classuri/resume")}'>启用</a>
+					<a data-update="{$vo.id}" data-field='status' data-value='1' onclick="confirmMsg('/admin/admin/forbid?id={$vo.id}&status=1','确认启用吗')">启用</a>
 					{/if}
-
-					{if auth("$classuri/del")}
+ 
 					<span class="text-explode">|</span>
 					<a data-update="{$vo.id}" data-field='delete' data-action='{:url("$classuri/del")}'>删除</a>
-					{/if}
+				 
 
 				</td>
 			</tr>
