--- a/App/Views/admin/admin/user.html
+++ b/App/Views/admin/admin/user.html
@@ -106,7 +106,7 @@
 					{/if}
  
 					<span class="text-explode">|</span>
-					<a data-update="{$vo.id}" data-field='delete' data-action='{:url("$classuri/del")}'>删除</a>
+					<a data-update="{$vo.id}" data-field='delete' onclick="confirmMsg('/admin/admin/delete?id={$vo.id}&is_deleted=1','确认删除吗')">删除</a>
 				 
 
 				</td>
