--- a/App/Views/admin/admin/user.html
+++ b/App/Views/admin/admin/user.html
@@ -1,7 +1,7 @@
 ﻿{extend name="public/base" /}
 
 {block name='main'}
-	<form class="layui-form layui-form-pane form-search" action="" onsubmit="return false" method="get">
+	<form class="layui-form layui-form-pane form-search" action="/admin/admin/user" onsubmit="return false" method="get">
 
 		<div class="layui-form-item layui-inline">
 			<label class="layui-form-label">用户账号</label>
